--- a/UI/main.ui
+++ b/UI/main.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1235</width>
-    <height>812</height>
+    <height>844</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,7 +15,7 @@
   </property>
   <property name="styleSheet">
    <string notr="true">*{
-	background-color: rgb(33, 33, 33);
+background-color: rgb(33, 33, 33);
 }
 #code_win{
 border-left:2px solid #455A64;
@@ -59,7 +59,139 @@ background-color:red;
          <property name="currentIndex">
           <number>0</number>
          </property>
-         <widget class="QWidget" name="page_area"/>
+         <widget class="QWidget" name="page_area">
+          <widget class="QPushButton" name="pushButton">
+           <property name="geometry">
+            <rect>
+             <x>110</x>
+             <y>170</y>
+             <width>101</width>
+             <height>31</height>
+            </rect>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">background-color: rgb(62, 62, 62);
+border:1px solid rgb(3, 158, 255);
+color:rgb(255, 255, 255);
+border-radius:5px;
+font: 9pt &quot;等线&quot;;</string>
+           </property>
+           <property name="text">
+            <string>渲染</string>
+           </property>
+          </widget>
+          <widget class="QLineEdit" name="lineEdit">
+           <property name="geometry">
+            <rect>
+             <x>60</x>
+             <y>320</y>
+             <width>211</width>
+             <height>41</height>
+            </rect>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">border:1px solid rgb(131, 131, 0)</string>
+           </property>
+          </widget>
+          <widget class="QPushButton" name="pushButton_2">
+           <property name="geometry">
+            <rect>
+             <x>130</x>
+             <y>250</y>
+             <width>80</width>
+             <height>30</height>
+            </rect>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">border:1px solid #009688;
+font: 9pt &quot;等线&quot;;
+color: rgb(255, 255, 255);</string>
+           </property>
+           <property name="text">
+            <string>访问</string>
+           </property>
+          </widget>
+          <widget class="QComboBox" name="comboBox">
+           <property name="geometry">
+            <rect>
+             <x>310</x>
+             <y>210</y>
+             <width>181</width>
+             <height>31</height>
+            </rect>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">border:1px solid rgb(170, 170, 255);
+color: rgb(255, 255, 255);</string>
+           </property>
+           <item>
+            <property name="text">
+             <string>asd</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>sad</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>dsa</string>
+            </property>
+           </item>
+          </widget>
+          <widget class="QPushButton" name="pushButton_3">
+           <property name="geometry">
+            <rect>
+             <x>360</x>
+             <y>130</y>
+             <width>111</width>
+             <height>61</height>
+            </rect>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">border:2px dotted rgb(225, 112, 169);</string>
+           </property>
+           <property name="text">
+            <string>div</string>
+           </property>
+          </widget>
+          <widget class="QGroupBox" name="groupBox_2">
+           <property name="geometry">
+            <rect>
+             <x>70</x>
+             <y>400</y>
+             <width>361</width>
+             <height>151</height>
+            </rect>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">border:1px solid rgb(0, 170, 255)</string>
+           </property>
+           <property name="title">
+            <string>GroupBox</string>
+           </property>
+          </widget>
+          <widget class="QPushButton" name="pushButton_4">
+           <property name="geometry">
+            <rect>
+             <x>480</x>
+             <y>330</y>
+             <width>90</width>
+             <height>30</height>
+            </rect>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">border:1px solid rgb(0, 232, 0);
+color: rgb(255, 255, 255);
+font: 10pt &quot;等线&quot;;
+background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.585227 rgba(98, 192, 255, 80));</string>
+           </property>
+           <property name="text">
+            <string>生成代码</string>
+           </property>
+          </widget>
+         </widget>
          <widget class="QWidget" name="page_3"/>
         </widget>
        </item>
